# python-visitkorea-api

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  claude.json  codex.json  krtourapi-api.md  pyproject.toml
.codex/: config.toml
debug_ui/: app.py
docs/: openapi-catalog.md  pydantic-models.md  repeated-mistakes.md  testing.md  troubleshooting.md  user-guide.md
scripts/: run_live_tests.ps1
src/visitkorea/: __init__.py  _auth.py  _http.py  _pagination.py  _ratelimit.py  _service_views.py  cli.py  client.py  enums.py  hub.py  models.py  operation_schema.py  service_models.py  services.py
tests/: conftest.py  test_async.py  test_cli.py  test_client.py  test_convert.py  test_docs.py  test_enums.py  test_http.py  test_hub.py  test_live.py  test_retry.py  test_typed_views.py
