[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-visitkorea-api"
version = "0.2.0"
description = "Unofficial Python client for Korea Tourism Organization TourAPI."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "digitie"}
]
keywords = ["tourapi", "korea", "tourism", "visitkorea", "data.go.kr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-kraddr-base @ git+https://github.com/digitie/python-kraddr-base.git@1f3d2ac6c727ae6ad6bc32f8f88fd3f599c6bef6",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "ruff>=0.5",
  "mypy>=1.10",
]
debug-ui = [
  "pandas>=2.0",
  "streamlit>=1.35",
]

[project.scripts]
visitkorea = "visitkorea.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["visitkorea*"]

[tool.setuptools.package-data]
visitkorea = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/visitkorea/client.py" = ["A002", "SIM108", "TC001", "TC002", "TC003"]
"src/visitkorea/hub.py" = ["A002", "TC001", "TC002", "TC003"]
"src/visitkorea/models.py" = ["A003", "N815", "TC001", "TC003"]
"src/visitkorea/operation_schema.py" = ["TC001", "TC002", "TC003"]
"src/visitkorea/services.py" = ["TC001", "TC002", "TC003"]
"src/visitkorea/display.py" = ["TC001"]
"src/visitkorea/_http.py" = ["TC001", "TC002", "TC003"]
"src/visitkorea/_auth.py" = ["TC001", "TC002", "TC003"]
"src/visitkorea/_pagination.py" = ["TC001", "TC003"]
"src/visitkorea/_provenance.py" = ["TC003"]
"src/visitkorea/_convert.py" = ["TC003"]
"src/visitkorea/_ratelimit.py" = ["TC001", "TC002", "TC003"]
"src/visitkorea/cli.py" = ["TC003"]
"tests/**/*.py" = ["TC001", "TC002", "TC003", "RUF043"]
"debug_ui/**/*.py" = ["TC001", "TC002", "TC003", "RUF005"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
  "live: tests that call the real TourAPI service and require DATA_GO_KR_SERVICE_KEY",
]
